# azure-nuke

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  RELEASE_WORKFLOW.md  VERSION_NOTES.md  aznuke.spec  aznuke_run.py  cli_entry.py  entry_point.py  main.py  mkdocs.yml  pypi_publish.sh  pyproject.toml  requirements.txt  setup.py  test_animation.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build.yml  docs.yml  homebrew.yml
aznuke/: __init__.py  __main__.py  cli.py
aznuke/config/: exclusions.yaml
aznuke/core/: __init__.py
aznuke/src/: __init__.py  animations.py  deletion.py  dependencies.py  discovery.py  filtering.py  safety.py
config/: exclusions.yaml
docs/: api.md  ci-setup.md  configuration.md  contributing.md  index.md  installation.md  usage.md
homebrew/: aznuke.rb
scripts/: build.sh  release.sh
src/: __init__.py  animations.py  auth.py  deletion.py  dependencies.py  discovery.py  filtering.py  safety.py
tests/: __init__.py  conftest.py  test_animations.py  test_cli.py  test_compatibility_imports.py  test_deletion.py  test_discovery.py  test_filtering.py  test_safety.py
